--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Olena Bystrova",
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^5.3.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/4bystrova/js-advanced.git"
