--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "3.2.5"
   }
 }
